Ajout validator